When the board is shorter than the screen, center the board and fill in the gaps with darker color.

--- a/JailbreakPong/app/src/main/res/values/colors.xml
+++ b/JailbreakPong/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="paleYellow">#FFFAE7</color>
     <color name="paleBlue">#E7FFFE</color>
+    <color name="gapYellow">#FFF0D7</color>
+    <color name="gapBlue">#C9F5FF</color>
     <color name="palePurple">#E2DDFE</color>
     <color name="paleOrange">#FEE0D8</color>
     <color name="gradientBlueDark">#0CBEEC</color>
