--- a/JailbreakPong/app/src/main/res/layout/activity_main.xml
+++ b/JailbreakPong/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@android:color/transparent" />
+
+        <SurfaceView
+            android:id="@+id/boardMessages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@android:color/transparent" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
